<resources>
    <string name="app_name">Scout Laws</string>
    <string name="law_1">A cserkész egyeneslelkű és feltétlenül igazat mond.</string>
    <string name="law_1_desc">A cserkész egyeneslelkű és feltétlenül igazat mond.\nAz egyenesség a cserkész legfőbb erénye. A cserkész nem hazudik és nem csal. Mindig az egyenes utat keresi, és feljebbvalói (szülei, csapatparancsnoka, őrsvezetői) tudják, hogy megbízhatnak benne.</string>
    <string name="law_1_desc_orig">„A cserkész becsületes. Ha egy cserkész azt mondja „Szavamra!”, akkor az úgy is van, mintha csak esküt tett volna. Hasonlóképp, ha egy cserkésztiszt azt mondja egy cserkésznek „Megbízlak vele”, a cserkész köteles a kapott feladatot legjobb képessége szerint végrehajtani, és ettől semmi nem tántoríthatja el. Ha egy cserkész hazugság vagy a feladatainak nem teljesítése által elherdálja becsületét, a parancsnoka utasíthatja, hogy adja vissza a jelvényét, melyet nem viselhet többé. Arra is utasíthatják, hogy ne legyen többé cserkész.”</string>
    <string name="law_2">A cserkész híven teljesíti kötelességeit, melyekkel Istennek hazájának és embertársainak tartozik.</string>
    <string name="law_2_desc">A cserkész híven teljesíti kötelességeit, melyekkel Istennek, hazájának és embertársainak tartozik.\nA cserkész nem csak szereti Istent, országát és embertársait, de hűséges is hozzájuk. Ez a hűség az irántuk való felelősségéből adódik. Felelősek vagyunk hazánk iránt, mert itt nőttünk fel, és amíg felnövünk, gondunkat viseli. Felelősek vagyunk embertársaink iránt, mert egyedül senki sem boldogulhat a világban. Közösségben létezünk, és gyakran másokra vagyunk utalva, így hát nekünk is kötelességeink vannak mások felé, és erőnkhöz mérten segítenünk kell a körülöttünk levőkön.\nEz a hűség ugyanakkor nem azt jelenti, hogy nem fogalmazhatunk meg jogos kritikákat hazánkkal vagy embertársainkkal szemben, vagy hogy le szabad néznünk azokat, akik más valláshoz vagy nemzethez tartoznak. A hűség elsősorban szeretetet, és nem gyűlöletet jelent.</string>
    <string name="law_2_desc_orig">„A cserkész hűséggel viseltetik királya, felettesei, hazája szülei és munkaadója iránt, és azok iránt, akik rá vannak bízva. Kitart mellettük jóban és rosszban, ellenségeikkel és ócsárlóikkal szemben.”</string>
    <string name="law_3">A cserkész ahol tud, segít.</string>
    <string name="law_3_desc">A cserkész ahol tud, segít.\nA lehetőség, hogy segítsünk, bármilyen formában elénk állhat. Egy kis segítség lehet, ha segítünk egy idős néninek hazacipelni a bevásárlást, vagy megosztjuk sátrunkat cserkésztársunkkal, ha az övé beázott. Egy „nagy” segítség lehet, ha mentőt hívunk egy balesethez, ellátunk egy sérültet, vagy kimentünk valakit a folyóból (ha nem tudsz úszni, inkább hívj segítséget!). Attól függetlenül, hogy „kis” vagy „nagy” jótettekről van szó, a legfontosabb, hogy felismerjük ezeket a lehetőségeket, és ne menjünk el tétlenül mellettük. Hogy ez szokásoddá váljon, próbálj meg minden nap egy jó cselekedetet tenni.</string>
    <string name="law_3_desc_orig">„A cserkész köteles hasznos és segítőkész lenni. Ezen kötelességeit minden más előtt kell tartania, akkor is, ha ez a saját kényelmébe vagy biztonságába kerül. Amikor válaszút előtt áll, és nem tud dönteni, az kell kérdeznie magától: „Melyik a kötelességem?”, vagyis „Melyikkel segíthetek legtöbbet másokon?”, és azt az utat választania. Mindig készen kell állnia, hogy életet mentsen, vagy hogy segítsen a sebesülteken. A cserkésznek meg kell próbálnia miden nap végre hajtani egy jó cselekedetet.”</string>
    <string name="law_4">A cserkész minden cserkészt testvérének tekint.</string>
    <string name="law_4_desc">A cserkész minden cserkészt testvérének tekint,\nfüggetlenül attól, hogy másik csapatból, városból vagy országból való. Minden cserkész osztozik ugyanazokon az alapvető értékeken, amelyeket a 10 cserkésztörvény is képvisel. Örüljünk hát, ha ismeretlen cserkészekkel találkozunk, és beszélgessünk el velük. Bizonyára ő is örülni fog nekünk.\nNe legyünk sznobok! A cserkészek között nincsenek szegények és gazdagok, erősek és gyengék: minden cserkész a testvérünk, viselkedjünk velük ebben a szellemben.</string>
    <string name="law_4_desc_orig">„A cserkész barátja mindenkinek, és testvére minden cserkésznek, függetlenül attól, hogy az milyen társadalmi osztályhoz tartozik. Ha egy cserkész egy másik cserkésszel találkozik, ha idegen is, meg kell szólítania, és segítenie neki bármi lehető módon, feladata elvégzésében, vagy éppen étele megosztásával vagy bármi mással, amiben a másik hiányt szenved. Egy cserkész sosem hordhatja fenn az orrát. Nem nézheti le a szegényebbeket, vagy irigykedhet mások vagyonára. A cserkész elfogadja a másik személyt úgy, ahogy van.”</string>
    <string name="law_5">A cserkész másokkal szemben gyöngéd, magával szemben szigorú.</string>
    <string name="law_5_desc">A cserkész másokkal szemben gyöngéd, magával szemben szigorú.\nMindenkinek vannak hibái. Te talán észre sem veszed egyes hibáidat, de azokat mások tisztán látják. Éppen ezért sose hányjuk durván mások szemére hibáikat, és ne ócsároljuk őket. Ellenkezőleg: ha egy barátunk felhívja figyelmünket egy hibánkra, ne legyünk mérgesek, inkább fontoljuk meg, vajon igaza van? Valószínűleg igen. Próbáljuk meg kijavítani saját hibáinkat, és legyünk elnézőek másokkal szemben.</string>
    <string name="law_5_desc_orig">„A cserkész udvarias. Mindenkivel szemben illedelmesen viselkedik, de főleg a nőkkel és gyerekekkel, idős emberekkel és fogyatékosokkal szemben. A cserkész nem fogad el jutalmat segítségéért vagy illedelmességéért.”</string>
    <string name="law_6">A cserkész szereti a természetet, jó az állatokhoz és kíméli a növényeket.</string>
    <string name="law_6_desc">A cserkész szereti a természetet, jó az állatokhoz, és kíméli a növényeket.\nAhogyan nem bántanál egy nálad gyengébb gyereket, vagy a kistestvéred, ugyanúgy ne bánts egy állatot sem. Az állatoknak, ha nem is olyan okosak vagy erősek, mint mi vagyunk, ugyanúgy vannak érzéseik. Sőt! Talán a kutyád hűségesebb hozzád és jobban szeret, mint a legjobb barátod. Hasonlóképpen, kíméld a növényeket! Fölöslegesen ne vágj ki egy fát, és kedvtelésből ne taposs el egy virágot. Tiszteld a természetet, mely körül vesz!</string>
    <string name="law_6_desc_orig">„A cserkész barátja minden állatnak. Kímélnie kell őket, amennyire lehetséges, és nem ölhet meg egy állatot szükségtelenül, akkor sem, ha az csak egy légy, mert az is Isten teremtménye. Élelemért vagy önvédelemből ölhetünk állatot.”</string>
    <string name="law_7">A cserkész feljebbvalóinak jó lélekkel és készségesen engedelmeskedik.</string>
    <string name="law_7_desc">A cserkész feljebbvalóinak jó lélekkel és készségesen engedelmeskedik.\nHa egy focimeccsen nálad van a labda, és a csapatkapitány azt kiálltja „Add középre!”, akkor mit teszel? Lepasszolod a labdát, vagy megpróbálsz egyedül gólt rúgni? Minden focista tudja, hogy egyedül sosem nyerhet meccset, ezért habozás nélkül engedelmeskedik kapitánya utasításainak – csapatban, és nem a saját dicsőségéért játszik. Hasonlóan, ha az őrsvezetőd vagy csapatparancsnokod feladatot ad neked, igyekezz azt késlekedés és vita nélkül végrehajtani. Bízz a vezetőidben, hisz a saját és a csapat érdekében cselekszenek! Ha úgy találod, hogy nincs igazuk, vitasd meg ezt velük miután a feladatod elvégezted, de ne hátráltasd a csapatot!</string>
    <string name="law_7_desc_orig">„A cserkész hallgat az őrsvezetőjének vagy csapatvezetőjének utasításaira, azokat nem kérdőjelezi meg. Ha nem ért egyet a paranccsal, akkor is úgy kell tennie, mint a matrózoknak és katonáknak, vagy ahogyan akkor tenne, ha focikapitányától kapna meccs közben egy utasítást, és végre kell hajtania azt, hiszen ez a kötelessége. És miután azt elvégezte, elmondhatja, miért nem tartja az utasítást helyesnek, de a végrehajtással nem késlekedhet. Ez a fegyelem.”</string>
    <string name="law_8">A cserkész vidám és meggondolt.</string>
    <string name="law_8_desc">A cserkész vidám és meggondolt.\nAz amerikai rabszolgák napi robotjuk közben ritmikus dalokat énekeltek, hogy elűzzék az unalmat és könnyebben viseljék a fárasztó munkát. A ókori görögök egy csata kezdete előtt himnuszt énekeltek, hogy túltegyék magukat félelmeiken és érezzék az egység erejét. Próbálj meg te is énekelni, ha menetelsz vagy dolgozol, és könnyebben megy majd a munka. Erőltess mosolyt az arcodra és légy magabiztos, ha nehéz feladat előtt állsz. Próbálj meg másokat is felvidítani. De ügyelj, a vidámság nem azt jelenti, hogy szeleburdik vagy meggondolatlanok vagyunk! Ellenkezőleg: a cserkész mindig megfontoltan és a legjobb belátása szerint cselekszik.</string>
    <string name="law_8_desc_orig">„A cserkész mosolyog és fütyül minden körülmények között. Amikor feladatot kap, azt jókedvvel hajtja végre, és készségesen, nem totojázva és a lábát húzva. A cserkészek sosem fordulnak el a nehézségtől, nem panaszkodnak, és nem szitkozódnak, mikor akadályba ütköznek. Amikor elkésed a vonatot, vagy valaki letapodja a kedvenc kukoricádat – miért is lenne egy cserkésznek kukoricája? – vagy bármilyen más problémával szembesülsz, erőltess mosolyt az arcodra, fütyülj el egy dallamot, és rendben leszel.\nA szitkozódásért és illetlen nyelvezet használatáért büntetésként a többi cserkész töltsön le egy csésze hideg vizet az ingujjadon. Ezt a büntetést egy régi brit cserkész [katonai felderítő], John Smith kapitány találta ki háromszáz évvel ezelőtt.”</string>
    <string name="law_9">A cserkész takarékos.</string>
    <string name="law_9_desc">A cserkész takarékos.\nSose pazarolj! Ha táborban vagy, ügyelj a vízre és a zsinegre – ha elfogy, mihez kezdesz? Ne tégy több ételt a csajkádba, mint amennyit megeszel – így biztosan jut másnak is. A zsebpénzed ne költsd el rögtön fagyira, tedd félre, és egy nap majd veszel belőle valamit, amit igazán szeretnél – egy könyvet, egy gitárt?</string>
    <string name="law_9_desc_orig">„A cserkész takarékos, vagyis félretesz minden lehető pengőt, és beteszi a bankba, hogy el tudja látni magát akkor is, ha munka nélkül marad, és ne hogy kelljen másokra szoruljon – vagy hogy segíthessen másokon, mikor ők vannak szükségben.”</string>
    <string name="law_10">A cserkész testben és lélekben tiszta.</string>
    <string name="law_10_desc">A cserkész testben és lélekben tiszta.\nUgye, milyen jól esik, mikor egy hosszú és izzadságos nap után megfürödhetsz és újra frissnek érzed magad? Ugyanígy fontos, hogy az elménket és lelkiismeretünket is tisztán tartsuk. Amikor valami rosszat teszel, nem tudsz nyugodtan aludni. Ha valamit sokáig halogatsz, mindig ott fog motoszkálni a gondolataid mögött. Ugye, milyen zavaró? Igyekezz úgy élni, hogy testben és lélekben is tiszta legyél.</string>
    <string name="law_10_desc_orig">„A cserkész tiszta gondolataiban, szavában és cselekedeteiben. A jó cserkészek lenézik azokat a fiatalokat, akik csúnyán beszélnek, és nem adnak utat a csábításnak, hogy ők is így beszéljenek vagy viselkedjenek. A cserkész szemérmes, tiszta gondolatú, és férfias.”</string>
    <string name="source_modern"></string>
    <string name="source_orig">A cserkésztörvények eredeti magyarázatának fordítása Bi-Pi Young Knights of the Empire: Their Code, and Further Scout Yarns című könyvéből.</string>
    <string name="action_menu">Show Menu</string>
    <string name="action_more">Show More</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="choose_quiz">Válassz egy kvízfajtát!</string>
    <string name="any_quiz">Bármilyen</string>
    <string name="multiple_quiz">Feleletválasztós</string>
    <string name="pick_quiz">Beillesztős</string>
    <string name="results">Eredmény</string>
    <string name="back_button">Vissza</string>
    <string name="retry_button">Újra</string>
</resources>