<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_chooser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        tools:context="com.b4kancs.scoutlaws.views.quiz.chooser.ChooserFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_chooser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="16dp"
                    android:text="@string/choose_quiz"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/colorTextDark"
                    tools:text="Choose a quiz type!" />

                <Button
                    android:id="@+id/button_any"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/any_quiz"
                    android:textColor="@color/colorTextLight"
                    app:colorPrimaryOrLight="@{true}"
                    app:textShadow="@{true}"
                    tools:text="Any" />

                <Button
                    android:id="@+id/button_multiple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/multiple_quiz"
                    android:textColor="@color/colorTextLight"
                    app:colorPrimaryOrLight="@{true}"
                    app:textShadow="@{true}"
                    tools:text="Multiple choice" />

                <Button
                    android:id="@+id/button_pick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/pick_quiz"
                    android:textColor="@color/colorTextLight"
                    app:colorPrimaryOrLight="@{true}"
                    app:textShadow="@{true}"
                    tools:text="Picker" />

                <Button
                    android:id="@+id/button_sorter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/sorter_quiz"
                    android:textColor="@color/colorTextLight"
                    app:colorPrimaryOrLight="@{true}"
                    app:textShadow="@{true}"
                    tools:text="Sorbarakós" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>